--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arvo;
+}
+
+body {
+    background: url("../images/bg.jpg") top center no-repeat #3f0002;
+    background-size: cover;
+    height: 820px;
+    /*background-color: #3f0002;*/
 }
 
 .social {
@@ -11,6 +19,7 @@
 }
 
 .social a {
+    opacity: 0.4;
     text-decoration: none;
     display: block;
     width: 50px;
@@ -20,10 +29,14 @@
     text-align: center;
     font-size: 33px;
     cursor: pointer;
+    transition: 0.3s;
 }
 .social a:last-of-type {
     font-size: 27px;
     background-color: #98161b;
+}
+.social a:hover {
+    opacity: 1;
 }
 
 header {
@@ -31,8 +44,87 @@ header {
     background-color: #af2024;
 }
 
-.container {
+.banner {
+    padding-top: 6px;
+}
 
+.container:first-of-type {
+    max-width: 960px;
+    margin: auto;
+    position: relative;
+    top: 14px;
+}
+.container:last-of-type {
+    max-width: 710px;
+    margin: auto;
+    position: relative;
+    top: 36px;
+}
+
+.player {
+    height: 345px;
+    background-color: #e7e7e7;
+    position: relative;
+    margin-bottom: 30px;
+}
+
+.player span {
+    display: inline-block;
+    width: 47px;
+    height: 54px;
+    line-height: 54px;
+    font-size: 54px;
+    color: #3f0002;
+    cursor: pointer;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -23px;
+    margin-top: -27px;
+    opacity: 0.8;
+    transition: 0.5s;
+}
+.player span:hover {
+    opacity: 1;
+    color: #98161b;
+}
+
+.container .title {
+    padding: 27px 18px;
+    background-color: #98161b;
+    font-weight: 700;
+    font-size: 20px;
+    text-transform: capitalize;
+    color: white;
+}
+.container .content {
+    background-color: white;
+    padding: 65px 70px 125px 75px;
+}
+.content h2 {
+    font-weight: 700;
+    font-size: 13px;
+    color: #98161b;
+}
+.content h2 span {
+    font-weight: 400;
+    color: #7d7d7d;
+}
+.content h2:after {
+    content: "";
+    display: block;
+    margin-top: 20px;
+    border-bottom: 2px dotted #98161b;
+    width: 45px;
+    margin-bottom: 15px;
+}
+
+
+.content p {
+    line-height: 18px;
+    font-size: 12px;
+    color: #98161b;
+    font-weight: 400;
 }
 
 p {
